<resources>
    <string name="app_name">Voting Right!</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="save_button">Save</string>
    <string name="resource_ID">Valid Forms of ID</string>
    <string name="resource_voter_status">Registration Status</string>
    <string name="resource_early_voting">Early Voting</string>
    <string name="resource_iSideWith">iSideWith</string>
    <string name="resource_register_to_vote">Register to Vote</string>
    <string name="resource_absentee">Absentee Ballot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_state">State</string>
    <string name="register_tag">"To register to vote in %s, you must:"</string>
    <string name="register_button">Register to Vote</string>
<<<<<<< HEAD
    <string name="ID_text">Find out if you need to bring proper identification to vote </string>
    <string name="Reg_text">Want to vote? Check your state\'s requirements</string>
    <string name="Early_text">Check if your state allows you to vote prior to election day</string>
    <string name="Absentee_text">Not able to vote on election day? Find out how to request an absentee ballot and make your vote count.</string>
    <string name="Status_text">Confirm that you\'re registered to vote within your state</string>
    <string name="iSide_text">An Interactive site that matches voters to candidates that align with their political beliefs.</string>
=======
    <string name = "ID_text">What should you bring?</string>
    <string name = "Reg_text"> Check your state\'s requirements</string>
    <string name = "Early_text">Check if your state allows you to vote prior to election day</string>
    <string name = "Absentee_text">Request a ballot and make your vote count</string>
    <string name = "Status_text">Confirm that you\'re registered to vote within your state</string>
    <string name = "iSide_text">An Interactive site that matches voters to candidates</string>
>>>>>>> 7754b47dddbf12c3d583c78e025d8bb0ae41964a

    <string name="allElec_button">All Elections</string>
    <string name="myElec_button" translatable="false">My Elections</string>
    <string name="YOUR_API_KEY">AIzaSyCdkZV6pD8BXJByaz5CCYdqURAZKAawvlY</string>
<<<<<<< HEAD

    <string name="register">Not a Member Yet? Sign Up Here</string>
    <string name="already_user">Already a Member? Login Here</string>
=======
    <string name="channel_name">electionNotification</string>
    <string name="channel_description">Allow for election notifications</string>
>>>>>>> 7754b47dddbf12c3d583c78e025d8bb0ae41964a
</resources>